@@ -93,4 +93,6 @@ asmop;
 void genZ80Code (iCode *);
 void z80_emitDebuggerSymbol (const char *);
 
+extern bool assignment_optimal;
+
 #endif
